# test_vm

./: .gitignore  README.md  cli.py  database.py  pyproject.toml  secret.env
api/: main.py
api/routers/: products.py  users.py  vendor_machine.py  vendor_machine_operations.py
core/: authentication.py  commands.py  core_functions.py
datatypes/: datatypes.py
tests/: test_vendor_machine_operations.py
