[tool.poetry]
name = "test_match"
version = "0.1.0"
description = ""
authors = ["kennedy"]

[tool.poetry.scripts]
g2 = "core.commands:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
requests = "^2.28.1"
bcrypt = "^3.2.2"
PyYAML = "^6.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
